--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
-  "choose": "host_test",
+  "choose": "communication_test",
     "host_test": {
       "mode": "host_test",
         "local": {
-            "ip": "",
-            "user": ""
+            "ip": "172.22.60.25",
+            "user": "idk"
     },
     "pc1": {
-        "ip":"172.22.60.34",
+        "ip":"172.22.60.188",
         "user":"west1"
     },
     "pc2": {
-        "ip":"172.22.60.29",
+        "ip":"172.22.60.189",
         "user":"west2"
       }
     },
@@ -19,11 +19,11 @@
     "communication_test": {  
       "mode": "communication_test",
       "local": {
-        "ip": "",
-        "user": ""
+        "ip": "172.22.70.188",
+        "user": "west1"
       },
       "remote": {
-        "ip": "172.22.60.29",
+        "ip": "172.22.60.189",
         "user": "west2"      
       }
     }
